pagina contatti e portfolio

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <header>
-      <div class="left-section">
+      <nav class="left-section">
         <input type="checkbox" class="sidebar-toggle" id="toggle-checkbox" />
         <label id="toggle-label" for="toggle-checkbox"
           ><img class="hamburger-menu" src="../assets/images/icons/list.svg"
@@ -40,9 +40,9 @@
           <a href="../hobby/"><strong>Competenze</strong></a>
           <a href="../contact/"><strong>Contatti</strong></a>
         </div>
-      </div>
+      </nav>
       <div class="mid-section">
-        <a href="../"
+        <a href=""
           ><img
             class="logo"
             src="../assets/images/icons/logo.svg"
@@ -61,9 +61,7 @@
       </div>
     </header>
 
-
-
-    <div class="paragraph">
+    <section class="paragraph">
       <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
@@ -78,7 +76,7 @@
           <a href="../hobby/"> <button>Le mie passioni</button></a>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer>
       <div class="upper-section">
