--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <header>
-      <div class="left-section">
+      <nav class="left-section">
         <input type="checkbox" class="sidebar-toggle" id="toggle-checkbox" />
         <label id="toggle-label" for="toggle-checkbox"
           ><img class="hamburger-menu" src="assets/images/icons/list.svg"
@@ -40,7 +40,7 @@
           <a href="hobby/"><strong>Competenze</strong></a>
           <a href="contact/"><strong>Contatti</strong></a>
         </div>
-      </div>
+      </nav>
       <div class="mid-section">
         <a href=""
           ><img
@@ -61,7 +61,7 @@
       </div>
     </header>
 
-    <div class="presentation-photos">
+    <section class="presentation-photos">
       <div>
         <img
           class="profile-photo"
@@ -83,58 +83,61 @@
           alt="profile photo"
         />
       </div>
-    </div>
-    <div class="paragraph">
-      <h1>CHI SONO ?</h1>
-      <p>
-        Ciao, il mio nome è Lorenzo Castelletti e sono uno studente di
-        Start2Impact in
-        <strong>Full Stack Development</strong>. Ho frequentato la scuola per
-        geometri a Brescia (BS) e mi sono diplomato nel 2017.
-        <br />
-        Dopo il diploma ho cominciato a lavorare nel settore dell'energia
-        rinnovabile come geometra di un ufficio tecnico e successivamente ho
-        trovato un altro impiego come geometra di cantiere presso una piccola
-        impresa nell'ambito dell'edilizia.
-        <br />
-        <br />
-        Fin da bambino ho sempre avuto una passione per gli oggetti tecnologici
-        dove però mi limitavo a provare le varie funzioni di nuovi pc,
-        smartphone o accessori che trovavo nei vari negozi in cui erano esposti.
-        <br />
-        <br />
-        Da qualche mese ho deciso di approfondire questa mia passione
-        iscrivendomi al master di
-        <strong>Start 2 Impact</strong> per lo sviluppo di siti web e app che mi
-        hanno da sempre incuriosito.
-      </p>
-    </div>
+    </section>
 
-    <div class="paragraph">
-      <h2>COME HO CONOSCIUTO S2I ?</h2>
-      <p>
-        La prima volta che ho sentito paralre di
-        <strong>Start 2 Impact</strong> risale al periodo della pandemia del
-        2020. Trovai un post su Instagram in cui veniva spiegato cosa e come lo
-        facevano. <br />Rimasi colpito ma decisi di non iscrivermi subito.
-        <br />
-        <br />
-        Durante la primavera del 2023 mi capitò sott'occhio nuovamente un post
-        in cui veniva pubblicizzato il loro primo Open Day, al quale partecipai.
-        <br />
-        Al termine di quest'esperienza non avevo più nessun dubbio e decisi di
-        iscrivermi con la voglia di mettermi in gioco. Ho iniziato con il master
-        in <strong>Digital Marketing</strong> ma dopo poco capii che non era
-        proprio quello che faceva per me. Cambiai allora con il mio master
-        attuale, ovvero il <strong>Full Stack Development</strong>.
-        <br />
-        <br />
-        Sono solo agli inizi ma è come se avessi scoperto un nuovo mondo ancora
-        tutto da esplorare.
-      </p>
-    </div>
+    <section>
+      <div class="paragraph">
+        <h1>CHI SONO ?</h1>
+        <p>
+          Ciao, il mio nome è Lorenzo Castelletti e sono uno studente di
+          Start2Impact in
+          <strong>Full Stack Development</strong>. Ho frequentato la scuola per
+          geometri a Brescia (BS) e mi sono diplomato nel 2017.
+          <br />
+          Dopo il diploma ho cominciato a lavorare nel settore dell'energia
+          rinnovabile come geometra di un ufficio tecnico e successivamente ho
+          trovato un altro impiego come geometra di cantiere presso una piccola
+          impresa nell'ambito dell'edilizia.
+          <br />
+          <br />
+          Fin da bambino ho sempre avuto una passione per gli oggetti tecnologici
+          dove però mi limitavo a provare le varie funzioni di nuovi pc,
+          smartphone o accessori che trovavo nei vari negozi in cui erano esposti.
+          <br />
+          <br />
+          Da qualche mese ho deciso di approfondire questa mia passione
+          iscrivendomi al master di
+          <strong>Start 2 Impact</strong> per lo sviluppo di siti web e app che mi
+          hanno da sempre incuriosito.
+        </p>
+      </div>
+  
+      <div class="paragraph">
+        <h2>COME HO CONOSCIUTO S2I ?</h2>
+        <p>
+          La prima volta che ho sentito paralre di
+          <strong>Start 2 Impact</strong> risale al periodo della pandemia del
+          2020. Trovai un post su Instagram in cui veniva spiegato cosa e come lo
+          facevano. <br />Rimasi colpito ma decisi di non iscrivermi subito.
+          <br />
+          <br />
+          Durante la primavera del 2023 mi capitò sott'occhio nuovamente un post
+          in cui veniva pubblicizzato il loro primo Open Day, al quale partecipai.
+          <br />
+          Al termine di quest'esperienza non avevo più nessun dubbio e decisi di
+          iscrivermi con la voglia di mettermi in gioco. Ho iniziato con il master
+          in <strong>Digital Marketing</strong> ma dopo poco capii che non era
+          proprio quello che faceva per me. Cambiai allora con il mio master
+          attuale, ovvero il <strong>Full Stack Development</strong>.
+          <br />
+          <br />
+          Sono solo agli inizi ma è come se avessi scoperto un nuovo mondo ancora
+          tutto da esplorare.
+        </p>
+      </div>  
+    </section>
 
-    <div class="paragraph">
+    <section class="paragraph">
       <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
@@ -149,7 +152,7 @@
           <a href="hobby/"> <button>Le mie passioni</button></a>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer>
       <div class="upper-section">
