creata versione finale sito personale

--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
           <a href="../"><strong>Homepage</strong></a>
           <a href="../curriculum/"><strong>Il mio CV</strong></a>
           <a href="../portfolio/"><strong>Portfolio</strong></a>
-          <a href="../hobby/"><strong>Competenze</strong></a>
+          <a href="../skills/"><strong>Competenze</strong></a>
           <a href="../contact/"><strong>Contatti</strong></a>
         </div>
       </div>
