--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -37,12 +37,12 @@
           <a href="../"><strong>Homepage</strong></a>
           <a href="../curriculum/"><strong>Il mio CV</strong></a>
           <a href="../portfolio/"><strong>Portfolio</strong></a>
-          <a href="../hobby/"><strong>Competenze</strong></a>
+          <a href="../skills/"><strong>Competenze</strong></a>
           <a href="../contact/"><strong>Contatti</strong></a>
         </div>
       </nav>
       <div class="mid-section">
-        <a href=""
+        <a href="../"
           ><img
             class="logo"
             src="../assets/images/icons/logo.svg"
@@ -63,17 +63,132 @@
 
     <section class="paragraph">
       <div>
+        <h2>FORMAZIONE</h2>
+      </div>
+      <div class="formation">
+        <div>
+          <p><strong>Master in Full Stack Development</strong></p>
+        </div>
+        <div>
+          <p>c/o Start 2 Impact (in corso)</p>
+        </div>
+        <div>
+          <p><strong>Brevetto da bagnino</strong></p>
+        </div>
+        <div>
+          <p>c/o centro specializzato - Brescia (2018)</p>
+        </div>
+        <div>
+          <p><strong>Diploma da geometra</strong></p>
+        </div>
+        <div>
+          <p>c/o I.T.G. Tartaglia - Brescia (2017)</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="paragraph">
+      <div>
+        <h2>ESPERIENZE</h2>
+      </div>
+      <div class="experience">
+        <div>
+          <p><strong>Settore azienda:</strong></p>
+        </div>
+        <div>
+          <p>Rifiniture in edilizia</p>
+        </div>
+        <div>
+          <p><strong>Ruolo:</strong></p>
+        </div>
+        <div>
+          <p>Geometra di cantiere</p>
+        </div>
+        <div>
+          <p><strong>Periodo lavorativo:</strong></p>
+        </div>
+        <div>
+          <p>Novembre 2020 - Settembre 2023</p>
+        </div>
+      </div>
+      <hr>
+      <div class="experience">
+        <div>
+          <p><strong>Settore azienda:</strong></p>
+        </div>
+        <div>
+          <p>Costruzione impianti a biogas</p>
+        </div>
+        <div>
+          <p><strong>Ruolo:</strong></p>
+        </div>
+        <div>
+          <p>Geometra ufficio Tecnico</p>
+        </div>
+        <div>
+          <p><strong>Periodo lavorativo:</strong></p>
+        </div>
+        <div>
+          <p>Novembre 2019 - Novembre 2020</p>
+        </div>
+      </div>
+      <hr>
+      <div class="experience">
+        <div>
+          <p><strong>Settore azienda:</strong></p>
+        </div>
+        <div>
+          <p>Gestione piscine</p>
+        </div>
+        <div>
+          <p><strong>Ruolo:</strong></p>
+        </div>
+        <div>
+          <p>Bagnino</p>
+        </div>
+        <div>
+          <p><strong>Periodo lavorativo:</strong></p>
+        </div>
+        <div>
+          <p>Maggio 2019 - Settembre 2019</p>
+        </div>
+      </div>
+      <hr>
+      <div class="experience">
+        <div>
+          <p><strong>Settore azienda:</strong></p>
+        </div>
+        <div>
+          <p>Energia rinnovabile (fotovoltaico)</p>
+        </div>
+        <div>
+          <p><strong>Ruolo:</strong></p>
+        </div>
+        <div>
+          <p>Geometra ufficio Tecnico</p>
+        </div>
+        <div>
+          <p><strong>Periodo lavorativo:</strong></p>
+        </div>
+        <div>
+          <p>Settembre 2017 - Ottobre 2018</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="paragraph">
+      <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
       <div class="buttons">
         <div>
-          <a href="../"> <button>Torna alla home</button></a>
+          <a href="../"> <button>TORNA ALLA HOME</button></a>
         </div>
         <div>
-          <a href="../portfolio/"> <button>Il mio portfolio</button></a>
+          <a href="../portfolio/"> <button>PORTFOLIO</button></a>
         </div>
         <div>
-          <a href="../hobby/"> <button>Le mie passioni</button></a>
+          <a href="../skills/"> <button>COMPETENZE</button></a>
         </div>
       </div>
     </section>
