--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,12 +37,12 @@
           <a href="../"><strong>Homepage</strong></a>
           <a href="../curriculum/"><strong>Il mio CV</strong></a>
           <a href="../portfolio/"><strong>Portfolio</strong></a>
-          <a href="../hobby/"><strong>Competenze</strong></a>
+          <a href="../skills/"><strong>Competenze</strong></a>
           <a href="../contact/"><strong>Contatti</strong></a>
         </div>
       </nav>
       <div class="mid-section">
-        <a href=""
+        <a href="../"
           ><img
             class="logo"
             src="../assets/images/icons/logo.svg"
@@ -65,37 +65,107 @@
       <div class="paragraph">
         <h1>I MIEI LAVORI</h1>
       </div>
-      <div class="work-card">
-        <div class="work-preview">
-          <img class="work-logo" src="../assets/images/icons/logo.svg" alt="logo del lavoro">
-        </div>
-        <div>
-          <p>Sito Lorenzo Casteletti</p>
-        </div>
-        <div>
-          <p>Dicembre 2023</p>  
-        </div>
-        <div>
-          <a href="#">
-            <button class="visit-button">VISITA IL SITO</button>
-          </a>
-        </div>
-      </div>
+      <div class="work-card-grid">
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="../assets/images/icons/logo.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>Sito Lorenzo Casteletti</p>
+          </div>
+          <div>
+            <p>Dicembre 2023</p>  
+          </div>
+          <div>
+            <a href="../">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
+        </div>     
        
-      <div class="work-card">
-        <div class="work-preview">
-          <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>In lavorazione...</p>
+          </div>
+          <div>
+            <p>Presto online</p>  
+          </div>
+          <div>
+            <a href="#">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
         </div>
-        <div>
-          <p>In lavorazione...</p>
+
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>In lavorazione...</p>
+          </div>
+          <div>
+            <p>Presto online</p>  
+          </div>
+          <div>
+            <a href="#">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
         </div>
-        <div>
-          <p>Presto online</p>  
+
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>In lavorazione...</p>
+          </div>
+          <div>
+            <p>Presto online</p>  
+          </div>
+          <div>
+            <a href="#">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
         </div>
-        <div>
-          <a href="#">
-            <button class="visit-button">VISITA IL SITO</button>
-          </a>
+
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>In lavorazione...</p>
+          </div>
+          <div>
+            <p>Presto online</p>  
+          </div>
+          <div>
+            <a href="#">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="work-card">
+          <div class="work-preview">
+            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+          </div>
+          <div>
+            <p>In lavorazione...</p>
+          </div>
+          <div>
+            <p>Presto online</p>  
+          </div>
+          <div>
+            <a href="#">
+              <button class="visit-button">VISITA IL SITO</button>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -106,13 +176,13 @@
       </div>
       <div class="buttons">
         <div>
-          <a href="../"> <button>Torna alla home</button></a>
+          <a href="../"><button>TORNA ALLA HOME</button></a>
         </div>
         <div>
-          <a href="../curriculum/"> <button>Scarica il mio CV</button></a>
+          <a href="../curriculum/"> <button>FUARDA IL MIO CV</button></a>
         </div>
         <div>
-          <a href="../hobby/"> <button>Le mie passioni</button></a>
+          <a href="../skills/"> <button>COMPETENZE</button></a>
         </div>
       </div>
     </section>
