--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href=""><strong>Homepage</strong></a>
           <a href="curriculum/"><strong>Il mio CV</strong></a>
           <a href="portfolio/"><strong>Portfolio</strong></a>
-          <a href="hobby/"><strong>Competenze</strong></a>
+          <a href="skills/"><strong>Competenze</strong></a>
           <a href="contact/"><strong>Contatti</strong></a>
         </div>
       </nav>
@@ -87,7 +87,7 @@
 
     <section>
       <div class="paragraph">
-        <h1>CHI SONO ?</h1>
+        <h1>CHI SONO?</h1>
         <p>
           Ciao, il mio nome è Lorenzo Castelletti e sono uno studente di
           Start2Impact in
@@ -113,7 +113,7 @@
       </div>
   
       <div class="paragraph">
-        <h2>COME HO CONOSCIUTO S2I ?</h2>
+        <h2>COME HO CONOSCIUTO S2I?</h2>
         <p>
           La prima volta che ho sentito paralre di
           <strong>Start 2 Impact</strong> risale al periodo della pandemia del
@@ -143,13 +143,13 @@
       </div>
       <div class="buttons">
         <div>
-          <a href="curriculum/"> <button>Scarica il mio CV</button></a>
+          <a href="curriculum/"> <button>GUARDA IL MIO CV</button></a>
         </div>
         <div>
-          <a href="portfolio/"> <button>Il mio portfolio</button></a>
+          <a href="portfolio/"> <button>PORTFOLIO</button></a>
         </div>
         <div>
-          <a href="hobby/"> <button>Le mie passioni</button></a>
+          <a href="skills/"> <button>COMPETENZE</button></a>
         </div>
       </div>
     </section>
