sistemato responsive e aggiornato fotografie

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -67,19 +67,19 @@
       </div>
       <div class="formation">
         <div>
-          <p><strong>Master in Full Stack Development</strong></p>
+          <p><strong>&#183; Master in Full Stack Development</strong></p>
         </div>
         <div>
           <p>c/o Start 2 Impact (in corso)</p>
         </div>
         <div>
-          <p><strong>Brevetto da bagnino</strong></p>
+          <p><strong>&#183; Brevetto da bagnino</strong></p>
         </div>
         <div>
           <p>c/o centro specializzato - Brescia (2018)</p>
         </div>
         <div>
-          <p><strong>Diploma da geometra</strong></p>
+          <p><strong>&#183; Diploma da geometra</strong></p>
         </div>
         <div>
           <p>c/o I.T.G. Tartaglia - Brescia (2017)</p>
