--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
       <div>
         <img
           class="profile-photo"
-          src="assets/images/profile-photo.jpeg"
-          alt="profile photo"
+          src="assets/images/profile-photo1.jpg"
+          alt="profile photo 1"
         />
       </div>
       <div>
         <img
           class="profile-photo"
-          src="assets/images/profile-photo.jpeg"
-          alt="profile photo"
+          src="assets/images/profile-photo2.jpg"
+          alt="profile photo 2"
         />
       </div>
       <div>
         <img
           class="profile-photo"
-          src="assets/images/profile-photo.jpeg"
-          alt="profile photo"
+          src="assets/images/profile-photo3.jpg"
+          alt="profile photo 3"
         />
       </div>
     </section>
@@ -115,14 +115,14 @@
       <div class="paragraph">
         <h2>COME HO CONOSCIUTO S2I?</h2>
         <p>
-          La prima volta che ho sentito paralre di
+          La prima volta che ho sentito parlare di
           <strong>Start 2 Impact</strong> risale al periodo della pandemia del
           2020. Trovai un post su Instagram in cui veniva spiegato cosa e come lo
           facevano. <br />Rimasi colpito ma decisi di non iscrivermi subito.
           <br />
           <br />
           Durante la primavera del 2023 mi capitò sott'occhio nuovamente un post
-          in cui veniva pubblicizzato il loro primo Open Day, al quale partecipai.
+          in cui veniva pubblicizzato il loro primo Open Day al quale partecipai.
           <br />
           Al termine di quest'esperienza non avevo più nessun dubbio e decisi di
           iscrivermi con la voglia di mettermi in gioco. Ho iniziato con il master
