--- a/skills/index.html
+++ b/skills/index.html
@@ -37,7 +37,7 @@
           <a href="../"><strong>Homepage</strong></a>
           <a href="../curriculum/"><strong>Il mio CV</strong></a>
           <a href="../portfolio/"><strong>Portfolio</strong></a>
-          <a href="../hobby/"><strong>Competenze</strong></a>
+          <a href="../skills/"><strong>Competenze</strong></a>
           <a href="../contact/"><strong>Contatti</strong></a>
         </div>
       </nav>
@@ -66,295 +66,303 @@
         <h2>COMPETENZE</h2>
       </div>
       <h3>Conoscenza lingue straniere:</h3>
-      <div class="skills">
-        <div>
-          <p>Inglese</p>
-        </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+      <div class="grid-skills">
+        <div class="skills">
+          <div>
+            <p>Inglese</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
         </div>  
-      </div>
-
+      </div> 
       <h3>Sistemi operativi:</h3>
-      <div class="skills">
-        <div>
-          <p>Windows</p>
-        </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+      <div class="grid-skills">
+        <div class="skills">
+          <div>
+            <p>Windows</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>macOs</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>macOs</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>iOS</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>iOS</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
+        </div>
       </div>
       <h3>Programmi:</h3>
-      <div class="skills">
-        <div>
-          <p>Microsoft Word</p>
-        </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+      <div class="grid-skills">
+        <div class="skills">
+          <div>
+            <p>Microsoft Word</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>Microsoft Excel</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>Microsoft Excel</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>Autocad 2D/3D</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>Autocad 2D/3D</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>Photoshop</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>Photoshop</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>Visual Studio Code</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>Visual Studio Code</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
+        </div>
+  
       </div>
       <h3>Linguaggi di programmazione:</h3>
-      <div class="skills">
-        <div>
-          <p>HTML</p>
-        </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+      <div class="grid-skills">
+        <div class="skills">
+          <div>
+            <p>HTML</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>CSS</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment full">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>CSS</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment full">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
-        </div>  
-      </div>
-      <div class="skills">
-        <div>
-          <p>Javascript</p>
         </div>
-        <div class="level-bar">
-          <div class="progress-container">
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
-            <div class="segment empty">
-              <div class="segment-text"></div>
-            </div>
+        <div class="skills">
+          <div>
+            <p>Javascript</p>
+          </div>
+          <div class="level-bar">
+            <div class="progress-container">
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+              <div class="segment empty">
+                <div class="segment-text"></div>
+              </div>
+            </div>  
           </div>  
         </div>  
       </div>
