--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,7 +85,7 @@
        
         <div class="work-card">
           <div class="work-preview">
-            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+            <img class="work-logo" src="/assets/images/icons/site-under-construction.svg" alt="logo del lavoro">
           </div>
           <div>
             <p>In lavorazione...</p>
@@ -102,7 +102,7 @@
 
         <div class="work-card">
           <div class="work-preview">
-            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+            <img class="work-logo" src="/assets/images/icons/site-under-construction.svg" alt="logo del lavoro">
           </div>
           <div>
             <p>In lavorazione...</p>
@@ -119,7 +119,7 @@
 
         <div class="work-card">
           <div class="work-preview">
-            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+            <img class="work-logo" src="/assets/images/icons/site-under-construction.svg" alt="logo del lavoro">
           </div>
           <div>
             <p>In lavorazione...</p>
@@ -136,7 +136,7 @@
 
         <div class="work-card">
           <div class="work-preview">
-            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+            <img class="work-logo" src="/assets/images/icons/site-under-construction.svg" alt="logo del lavoro">
           </div>
           <div>
             <p>In lavorazione...</p>
@@ -153,7 +153,7 @@
 
         <div class="work-card">
           <div class="work-preview">
-            <img class="work-logo" src="/assets/images/site-under-construction.svg" alt="logo del lavoro">
+            <img class="work-logo" src="/assets/images/icons/site-under-construction.svg" alt="logo del lavoro">
           </div>
           <div>
             <p>In lavorazione...</p>
@@ -179,7 +179,7 @@
           <a href="../"><button>TORNA ALLA HOME</button></a>
         </div>
         <div>
-          <a href="../curriculum/"> <button>FUARDA IL MIO CV</button></a>
+          <a href="../curriculum/"> <button>GUARDA IL MIO CV</button></a>
         </div>
         <div>
           <a href="../skills/"> <button>COMPETENZE</button></a>
