sistemato piè di pagina

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -176,7 +176,7 @@
       </div>
     </section>
 
-    <section class="paragraph">
+    <section class="more-info">
       <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
