--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,8 @@
 
     <footer>
       <div class="upper-section"><a name="contacts" href="../contact/"><button>SCRIVIMI !</button></a>
-        <p> o visita i miei social</p></div>
+        <p> o visita i miei social</p>
+      </div>
       <div class="middle-section">
         <a href="https://www.instagram.com/lorycastelletti/" target="_blank">
           <img src="../assets/images/icons/instagram.svg" alt="instagram logo"></a>
