--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>  
     </section>
 
-    <section class="paragraph">
+    <section class="more-info">
       <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
