--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -170,7 +170,7 @@
       </div>
     </section>
 
-    <section class="paragraph">
+    <section class="more-info">
       <div>
         <h2>VUOI SAPERE DI PIÙ?</h2>
       </div>
