--- a/contact/index.html
+++ b/contact/index.html
@@ -68,6 +68,24 @@
       </form>
     </div>
 
+    <section class="more-info">
+      <div>
+        <h2>VUOI SAPERE DI PIÙ?</h2>
+      </div>
+      <div class="buttons">
+        <div>
+          <a href="curriculum/"> <button>GUARDA IL MIO CV</button></a>
+        </div>
+        <div>
+          <a href="portfolio/"> <button>PORTFOLIO</button></a>
+        </div>
+        <div>
+          <a href="skills/"> <button>COMPETENZE</button></a>
+        </div>
+      </div>
+    </section>
+
+
     <footer>
       <div class="upper-section"><a name="contacts" href="../contact/"><button>SCRIVIMI !</button></a>
         <p> o visita i miei social</p>
